[metadata]
name = my-research
version = 0.0.1
description = A tool to scrape and summarize a given research body
author = Alex Monras
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    fastapi
    fitz
    beautifulsoup4
    lxml
    matplotlib
    pyarrow
    PyMuPDF
    wordcloud


[options.entry_points]
console_scripts =
    myresearch = myresearch.main:main
